@@ -72,7 +72,7 @@ else()
 	pkg_check_modules(${name} ${ARGN})
 	if(${${name}_FOUND})
 	  include_directories(${${name}_INCLUDE_DIRS})
-	  link_directories(${${name}_LIBRARY_DIRS})
+	  set(LIBPROXY_LIBRARY_DIRS ${LIBPROXY_LIBRARY_DIRS} ${${name}_LIBRARY_DIRS} PARENT_SCOPE)
 	else()
 	  set(${name}_FOUND 0 PARENT_SCOPE)
 	endif()
@@ -90,7 +90,7 @@ else()
       if(MOZJS_FOUND)
         break()
       endif()
-      unset(MOZJS_FOUND)
+      set(MOZJS_FOUND 0)
     endforeach()
 
     px_check_modules(GNOME gconf-2.0 gobject-2.0)
@@ -103,7 +103,7 @@ else()
 	set(KDE4_FOUND 1)
 	set(KDE4_LIBRARIES ${KDE4_KDECORE_LIBS} ${QT_LIBRARIES})
 	include_directories(${KDE4_INCLUDE_DIR} ${QT_INCLUDES})
-	link_directories(${KDE4_LIB_DIR})
+	set(LIBPROXY_LIBRARY_DIRS ${LIBPROXY_LIBRARY_DIRS} ${KDE4_LIB_DIR} PARENT_SCOPE)
 	string(REGEX REPLACE " *-fno-exceptions" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
       else()
 	set(KDE4_FOUND 0)
@@ -118,13 +118,16 @@ if(MOZJS_FOUND AND WEBKIT_FOUND)
   set(BIPR 0)
 endif()
 
+# Add link directories all at once
+link_directories(${LIBPROXY_LIBRARY_DIRS})
+
 #
 ## Module definition
 #
 message("MODULES TO BUILD:")
 px_module(config_envvar            "${ENVVAR_FOUND}" 1)
-px_module(config_gnome             "${GNOME_FOUND}"  0       ${X11_LIBRARIES})
-px_module(config_kde4              "${KDE4_FOUND}"   0       ${KDE4_LIBRARIES} ${X11_LIBRARIES})
+px_module(config_gnome             "${GNOME_FOUND}"  0)
+px_module(config_kde4              "${KDE4_FOUND}"   0       ${KDE4_LIBRARIES})
 px_module(config_macosx            "${SC_FOUND}"     1       ${SC_LIBRARIES} ${CF_LIBRARIES})
 px_module(config_w32reg            "${WIN32}"        1)
 px_module(ignore_domain            1                 1)
